Added resetPsw.html, Modified login.html, account.html & Deleted accountModified.html

--- a/pages/aboutEmotions.html
+++ b/pages/aboutEmotions.html
@@ -32,28 +32,28 @@
                 </div>
                 <div class="mb-56">
                     <h2 class="mb-12">6大基本情緒</h2>
-                    <div class="mb-12 d-flex justify-content-center">
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                    <div class="mb-12 d-md-flex justify-content-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="../assets/images/aboutEmotions/aboutEmo_happy.svg" alt="happy">
                             <span>快樂</span>
                         </div>
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="../assets/images/aboutEmotions/aboutEmo_sadness.svg" alt="sadness">
                             <span>悲傷</span>
                         </div>
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="../assets/images/aboutEmotions/aboutEmo_fear.svg" alt="fear">
                             <span>恐懼</span>
                         </div>
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="../assets/images/aboutEmotions/aboutEmo_hate.svg" alt="hate">
                             <span>厭惡</span>
                         </div>
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="../assets/images/aboutEmotions/aboutEmo_anger.svg" alt="anger">
                             <span>憤怒</span>
                         </div>
-                        <div class="emoImg d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="../assets/images/aboutEmotions/aboutEmo_amazing.svg" alt="amazing">
                             <span>驚訝</span>
                         </div>
