--- a/pages/login.html
+++ b/pages/login.html
@@ -43,12 +43,12 @@
                     </div> -->
                     <div class="mb-16">
                         <label for="loginAcount" class="form-label  d-flex justify-content-between">
-                            用戶名稱
+                            帳號
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
                         <input type="text" class="form-control rounded-pill px-20" id="loginAcount" placeholder="wavemocards" required>
                         <div class="invalid-feedback">
-                            請輸入正確的 e-mail 帳號
+                            請輸入正確的帳號
                         </div>
                     </div>
                     <div class="mb-32">
@@ -60,11 +60,13 @@
                         <div class="invalid-feedback">
                             請輸入正確的密碼
                         </div>
+                        <div class="mt-4 d-flex justify-content-end">
+                            <a class="link-gray-550 fw-normal fs-8" href="resetPsw.html">忘記密碼</a>
+                        </div>
                     </div>
                     <button class="w-100 mb-32 py-8 btn btn-main c-btn" type="submit">登入</button>
                 </form>
-                <a class="d-block 
-                click-me" href="signUp.html">點我註冊</a>
+                <a class="d-block click-me" href="signUp.html">點我註冊</a>
             </div>
         </div>
     </main>
