--- a/aboutEmotions.html
+++ b/aboutEmotions.html
@@ -95,28 +95,28 @@
                 </div>
                 <div class="mb-56">
                     <h2 class="mb-12">6大基本情緒</h2>
-                    <div class="mb-12 d-flex justify-content-center">
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                    <div class="mb-12 d-md-flex justify-content-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="/wavemocards/assets/aboutEmo_happy-dd338e96.svg" alt="happy">
                             <span>快樂</span>
                         </div>
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="/wavemocards/assets/aboutEmo_sadness-d85f8a2a.svg" alt="sadness">
                             <span>悲傷</span>
                         </div>
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="/wavemocards/assets/aboutEmo_fear-ab1ea3b5.svg" alt="fear">
                             <span>恐懼</span>
                         </div>
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="/wavemocards/assets/aboutEmo_hate-bd908ec9.svg" alt="hate">
                             <span>厭惡</span>
                         </div>
-                        <div class="emoImg me-32 d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="/wavemocards/assets/aboutEmo_anger-489a34e5.svg" alt="anger">
                             <span>憤怒</span>
                         </div>
-                        <div class="emoImg d-flex flex-column align-items-center">
+                        <div class="emoImg mb-20 mb-md-0 me-md-32 d-flex flex-column align-items-center">
                             <img class="mb-4" src="/wavemocards/assets/aboutEmo_amazing-9cedb0d2.svg" alt="amazing">
                             <span>驚訝</span>
                         </div>
