--- a/signUp.html
+++ b/signUp.html
@@ -77,7 +77,7 @@
                             E-mail
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
-                        <input type="email" class="form-control rounded-pill px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
+                        <input type="email" class="form-control rounded-pill px-20" id="singupEmail" placeholder="wavemocards@mail.com" required>
                         <div class="invalid-feedback">
                             請輸入正確的 e-mail 帳號
                         </div>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="mb-20">
                         <label for="singupAccount" class="form-label  d-flex justify-content-between">
-                            用戶名稱
+                            帳號
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
                         <input type="text" class="form-control rounded-pill px-20" id="singupAccount" placeholder="wavemocards" required>
