--- a/resetPsw.html
+++ b/resetPsw.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <title>浪潮情緒卡｜登入</title>
+    <title>浪潮情緒卡｜重設密碼</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
@@ -53,61 +53,50 @@
     </div>
 </header>
     <main  class="login d-flex justify-content-center align-items-stretch">
-        <div class="d-none d-lg-block img w-50">
-            <img src="/wavemocards/assets/login-bg-22843504.svg" alt="login page background">
-        </div>
 
-        <div class="box-50 py-32 px-24 d-flex flex-column align-items-center">
+        <div class="w-100 py-32 px-24 d-flex flex-column align-items-center">
             <div class="form">
                 <div class="mb-20 text-main d-flex flex-column align-items-center">
                     <i class="bi bi-person-circle profile"></i>
                 </div>
-                <h2 class="mb-32">登入</h2>
-                <!-- 尚未填入 a 連結 -->
-                <!-- <a class="w-100 mb-32 py-8 btn btn-outline-main c-btn-outline-main d-flex justify-content-center align-items-center" href="#">
-                    透過 Google 帳號登入
-                    <i class="bi bi-google ms-8"></i>
-                </a>
-                <div class="or mb-32">或</div> -->
+                <h2 class="mb-32">重設密碼</h2>
 
                 <!-- 尚未填入 action 內容 -->
                 <form action="#" method="post" class="needs-validation" novalidate>
-                    <!-- <div class="mb-16">
-                        <label for="loginEmail" class="form-label  d-flex justify-content-between">
-                            E-mail
-                            <span class="text-pink-tint02 fs-9">*必填</span>
-                        </label>
-                        <input type="text" class="form-control rounded-pill px-20" id="loginEmail" placeholder="wavemocards@gmail.com" required>
-                    </div> -->
-                    <div class="mb-16">
-                        <label for="loginAcount" class="form-label  d-flex justify-content-between">
-                            帳號
-                            <span class="text-pink-tint02 fs-9">*必填</span>
-                        </label>
-                        <input type="text" class="form-control rounded-pill px-20" id="loginAcount" placeholder="wavemocards" required>
-                        <div class="invalid-feedback">
-                            請輸入正確的帳號
-                        </div>
-                    </div>
                     <div class="mb-32">
-                        <label for="loginPassword" class="form-label d-flex justify-content-between">
-                            密碼
+                        <label for="loginAcount" class="form-label  d-flex justify-content-between">
+                            Email
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
-                        <input type="password" class="form-control rounded-pill px-20" id="loginPassword" required aria-describedby="passwordHelp" placeholder="********" required>
+                        <input type="text" class="form-control rounded-pill px-20" id="loginAcount" placeholder="wavemocards@mail.com" required>
                         <div class="invalid-feedback">
-                            請輸入正確的密碼
-                        </div>
-                        <div class="mt-4 d-flex justify-content-end">
-                            <a class="link-gray-550 fw-normal fs-8" href="resetPsw.html">忘記密碼</a>
+                            請輸入正確的 e-mail 帳號
                         </div>
                     </div>
-                    <button class="w-100 mb-32 py-8 btn btn-main c-btn" type="submit">登入</button>
+                    <button class="w-100 mb-32 py-8 btn btn-main c-btn" type="submit" data-bs-toggle="modal" data-bs-target="#staticBackdrop">重設密碼</button>
                 </form>
-                <a class="d-block click-me" href="signUp.html">點我註冊</a>
             </div>
         </div>
     </main>
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content rounded-3">
+            <div class="modal-header">
+            <h5 class="modal-title px-8 fs-5" id="staticBackdropLabel">請查看你的電子信箱</h5>
+            </div>
+            <div class="modal-body px-24">
+                <p>我們已經發送一封重設密碼通知信到</p>
+                <p class="text-main fs-7 fw-bold">elmaspy@gmail.com</p>
+                <p>請點擊信件中的連結進行修改密碼，如果沒有收到，請檢查你的垃圾郵件或再試一次忘記密碼！</p>
+            </div>
+            <div class="modal-footer">
+            <a class="btn btn-main link-white" href="login.html">重新登入</a>
+            </div>
+        </div>
+        </div>
+    </div>
 
     
 <!--  Bootstrap JS -->
