Added RWD at account & accountMyFriends page

--- a/pages/accountMyFriends.html
+++ b/pages/accountMyFriends.html
@@ -25,8 +25,8 @@
                 </div>
 
                 <!-- content -->
-                <div class="my-72 d-flex justify-content-center">
-                    <img class="me-40 mb-16" src="../assets/images/rocket.svg" alt="rocket">
+                <div class="my-72 d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-start">
+                    <img class="me-40 mb-16" src="../assets/images/rocket.svg" style="width: 209px;" alt="rocket">
                     <div class="d-flex flex-column justify-content-center text-gray-700">
                         <p class="mb-16 fs-2 fw-bold">此功能尚未開放......Sorry！</p>
                         <p class="mb-40 fs-2 fw-bold">正在火速開發中！敬請期待！</p>
