--- a/pages/account.html
+++ b/pages/account.html
@@ -28,8 +28,8 @@
                 </div>
 
                 <!-- content -->
-                <div class="row justify-content-between">
-                    <div class="col-4">
+                <div class="d-flex flex-column flex-md-row justify-content-between align-items-center align-items-md-start">
+                    <div class="box-account-img me-md-72">
                         <img class="mb-16" src="../assets/images/account_illu.svg" alt="account illustration">
                         <!-- 圖片引用來源 -->
                         <div class="mb-64">
@@ -38,7 +38,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="col-7">
+                    <div class="box-account-text">
                         <span class="mb-8 text-gray-700">Email</span>
                         <p class="ms-4 mb-24 fs-6 fw-bold">wavemo@gmail.com</p>
                         <span class="mb-8 text-gray-700">密碼</span>
