--- a/accountMyFriends.html
+++ b/accountMyFriends.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-      <script type="module" crossorigin src="/wavemocards/assets/main-8078abdc.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-1f1ec083.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-34a45a60.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-ebec4ae8.css">
     </head>
     <body>
         <header class="header h-logined fixed-top">
@@ -88,8 +88,8 @@
                 </div>
 
                 <!-- content -->
-                <div class="my-72 d-flex justify-content-center">
-                    <img class="me-40 mb-16" src="/wavemocards/assets/rocket-0f863241.svg" alt="rocket">
+                <div class="my-72 d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-start">
+                    <img class="me-40 mb-16" src="/wavemocards/assets/rocket-0f863241.svg" style="width: 209px;" alt="rocket">
                     <div class="d-flex flex-column justify-content-center text-gray-700">
                         <p class="mb-16 fs-2 fw-bold">此功能尚未開放......Sorry！</p>
                         <p class="mb-40 fs-2 fw-bold">正在火速開發中！敬請期待！</p>
