--- a/account.html
+++ b/account.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-      <script type="module" crossorigin src="/wavemocards/assets/main-8078abdc.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-1f1ec083.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-34a45a60.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-ebec4ae8.css">
     </head>
     <body>
         <header class="header h-logined fixed-top">
@@ -91,8 +91,8 @@
                 </div>
 
                 <!-- content -->
-                <div class="row justify-content-between">
-                    <div class="col-4">
+                <div class="d-flex flex-column flex-md-row justify-content-between align-items-center align-items-md-start">
+                    <div class="box-account-img me-md-72">
                         <img class="mb-16" src="/wavemocards/assets/account_illu-9a12c639.svg" alt="account illustration">
                         <!-- 圖片引用來源 -->
                         <div class="mb-64">
@@ -101,7 +101,7 @@
                             </span>
                         </div>
                     </div>
-                    <div class="col-7">
+                    <div class="box-account-text">
                         <span class="mb-8 text-gray-700">Email</span>
                         <p class="ms-4 mb-24 fs-6 fw-bold">wavemo@gmail.com</p>
                         <span class="mb-8 text-gray-700">密碼</span>
