--- a/pages/account.html
+++ b/pages/account.html
@@ -21,6 +21,7 @@
                     <h2 class="fs-3">我的帳戶</h2>
                     <form action="" method="">
                     <div class="nav-btn d-flex justify-content-end">
+                        <button class="d-none ms-16 btn btn-outline-main c-btn" id="btnCancel" type="button">取消</button>
                         <button class="ms-16 btn btn-outline-main c-btn" id="btnModify" type="button">編輯</button>
                         <input type="submit" class="d-none ms-16 btn btn-outline-main c-btn" id="btnSave" value="儲存"></button>
                         <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="accountMyFriends.html">好友管理</a>
@@ -92,6 +93,7 @@
         <%- include('./layout/baseJs'); -%>
         <script>
             const btnModify = document.querySelector('#btnModify');
+            const btnCancel = document.querySelector('#btnCancel');
             const btnSave = document.querySelector('#btnSave');
             const accountName = document.querySelector('#accountName');
             const lastName = document.querySelector('#lastName');
@@ -104,6 +106,7 @@
 
             btnModify.addEventListener("click", function(){
                 btnModify.classList.add("d-none");
+                btnCancel.classList.remove("d-none");
                 btnSave.classList.remove("d-none");
                 accountName.classList.add("d-none");
                 lastName.classList.add("d-none");
