--- a/account.html
+++ b/account.html
@@ -84,6 +84,7 @@
                     <h2 class="fs-3">我的帳戶</h2>
                     <form action="" method="">
                     <div class="nav-btn d-flex justify-content-end">
+                        <button class="d-none ms-16 btn btn-outline-main c-btn" id="btnCancel" type="button">取消</button>
                         <button class="ms-16 btn btn-outline-main c-btn" id="btnModify" type="button">編輯</button>
                         <input type="submit" class="d-none ms-16 btn btn-outline-main c-btn" id="btnSave" value="儲存"></button>
                         <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="accountMyFriends.html">好友管理</a>
@@ -232,6 +233,7 @@
 <!-- axios -->
 <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>        <script>
             const btnModify = document.querySelector('#btnModify');
+            const btnCancel = document.querySelector('#btnCancel');
             const btnSave = document.querySelector('#btnSave');
             const accountName = document.querySelector('#accountName');
             const lastName = document.querySelector('#lastName');
@@ -244,6 +246,7 @@
 
             btnModify.addEventListener("click", function(){
                 btnModify.classList.add("d-none");
+                btnCancel.classList.remove("d-none");
                 btnSave.classList.remove("d-none");
                 accountName.classList.add("d-none");
                 lastName.classList.add("d-none");
