--- a/resetPsw.html
+++ b/resetPsw.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-34a45a60.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-ebec4ae8.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-ccd2678c.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-4fc51099.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -54,7 +54,7 @@
 </header>
     <main  class="login d-flex justify-content-center align-items-stretch">
 
-        <div class="w-100 py-32 px-24 d-flex flex-column align-items-center">
+        <div class="box-resetPwd-text py-32 px-24 d-flex flex-column align-items-center">
             <div class="form">
                 <div class="mb-20 text-main d-flex flex-column align-items-center">
                     <i class="bi bi-person-circle profile"></i>
