--- a/pages/signup.html
+++ b/pages/signup.html
@@ -35,33 +35,38 @@
                 <!-- 尚未填入 action 內容 -->
                 <form action="#" method="post" class="needs-validation" novalidate>
                     <div class="mb-16">
-                        <label for="singupEmail" class="form-label  d-flex justify-content-between">
+                        <!-- email -->
+                        <label for="email" class="form-label  d-flex justify-content-between">
                             E-mail
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
-                        <input type="email" class="form-control rounded-pill px-20" id="singupEmail" placeholder="wavemocards@mail.com" required>
+                        <input type="email" class="form-control rounded-pill px-20" id="email" placeholder="wavemocards@mail.com" required>
                         <div class="invalid-feedback">
                             請輸入正確的 e-mail 帳號
                         </div>
                     </div>
+                    <!-- passWord -->
                     <div class="mb-16">
-                        <label for="singupPassword" class="form-label d-flex justify-content-between">
+                        <label for="pwd" class="form-label d-flex justify-content-between">
                             密碼
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
-                        <input type="password" class="form-control mb-8 rounded-pill px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
-                        <button class="px-16 fs-9 link-gray-550 bg-white border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        <input type="password" class="form-control mb-8 rounded-pill px-20" id="pwd" required aria-describedby="passwordHelp" placeholder="********" required>
+                        <!-- 密碼驗證 msg -->
+                        <div class="mt-4 ms-24 fs-9" id="pwdCmt"></div>
+                        <button class="ms-24 p-0 fs-9 link-gray-550 bg-white border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePwdRules" aria-expanded="false" aria-controls="collapsePwdRules">
                             點我看 設定密碼規則
                         </button>
                         <!-- collapse 卡片內容 -->
-                        <div class="collapse mx-12" id="collapseExample">
-                            <div class="card card-body py-8 bg-main-tint03 border-0 rounded-2">
+                        <div class="collapse mx-24" id="collapsePwdRules">
+                            <div class="card card-body py-8 bg-gray-200 border-0 rounded-2">
                                 <ol class="fs-9">
-                                    <li class="ms-16">至少包含<span class="fw-bold"> 8 </span>個字符。</li>
-                                    <li class="ms-16">至少包含<span class="fw-bold"> 1 個大寫 </span>字母（A-Z）。</li>
-                                    <li class="ms-16">至少包含<span class="fw-bold"> 1 個小寫 </span>字母（a-z）。</li>
+                                    <li class="ms-16">包含<span class="fw-bold"> 8 ~ 16 </span>個字符。</li>
+                                    <li class="ms-16">至少包含<span class="fw-bold"> 1 個英文字母</span>(A-Z或a-z)。</li>
+                                    <!-- <li class="ms-16">至少包含<span class="fw-bold"> 1 個大寫 </span>字母（A-Z）。</li>
+                                    <li class="ms-16">至少包含<span class="fw-bold"> 1 個小寫 </span>字母（a-z）。</li> -->
                                     <li class="ms-16">至少包含<span class="fw-bold"> 1 個數字 </span>（0-9）。</li>
-                                    <li class="ms-16">至少包含<span class="fw-bold"> 1 個特殊字符 </span>（例如！、@、#、$、%等）。</li>
+                                    <!-- <li class="ms-16">至少包含<span class="fw-bold"> 1 個特殊字符 </span>（例如！、@、#、$、%等）。</li> -->
                                 </ol>
                             </div>
                             </div>
@@ -70,33 +75,43 @@
                             請設定符合密碼規則的密碼
                         </div>
                     </div>
+                    <!-- passWord 2 -->
+                    <div class="mb-16">
+                        <label for="pwd2" class="form-label  d-flex justify-content-between">
+                            確認密碼
+                            <span class="text-pink-tint02 fs-9">*必填</span>
+                        </label>
+                        <input type="password" class="form-control rounded-pill px-20" id="pwd2" placeholder="請再次輸入您所欲設定的密碼" required>
+                        <div class="mt-4 ms-24" id="pwd2Cmt"></div>
+                    </div>
                     <div class="mb-20">
-                        <label for="singupAccount" class="form-label  d-flex justify-content-between">
+                        <label for="account" class="form-label  d-flex justify-content-between">
                             帳號
                             <span class="text-pink-tint02 fs-9">*必填</span>
                         </label>
-                        <input type="text" class="form-control rounded-pill px-20" id="singupAccount" placeholder="wavemocards" required>
+                        <input type="text" class="form-control rounded-pill px-20" id="account" placeholder="wavemocards" required>
                         <div class="invalid-feedback">
                             只能輸入英文和數字
                         </div>
                     </div>
+                    <!-- lastName & firstName -->
                     <div class="mb-20 row">
                         <div class="col-6">
-                            <label for="singupLastName" class="form-label  d-flex justify-content-between">
+                            <label for="lastName" class="form-label  d-flex justify-content-between">
                                 姓
                                 <span class="text-pink-tint02 fs-9">*必填</span>
                             </label>
-                            <input type="text" class="form-control rounded-pill px-20" id="singupLastName" placeholder="陳" required>
+                            <input type="text" class="form-control rounded-pill px-20" id="lastName" placeholder="陳" required>
                             <div class="invalid-feedback">
                                 請輸入您的姓氏
                             </div>
                         </div>
                         <div class="col-6">
-                            <label for="singupFirstName" class="form-label  d-flex justify-content-between">
+                            <label for="firstName" class="form-label  d-flex justify-content-between">
                                 名
                                 <span class="text-pink-tint02 fs-9">*必填</span>
                             </label>
-                            <input type="text" class="form-control rounded-pill px-20" id="singupFirstName" placeholder="浪潮" required>
+                            <input type="text" class="form-control rounded-pill px-20" id="firstName" placeholder="浪潮" required>
                             <div class="invalid-feedback">
                                 請輸入您的名字
                             </div>
@@ -104,20 +119,20 @@
                     </div>
                     <div class="mb-24 row">
                         <div class="col-6">
-                            <label for="singupBirthday" class="form-label d-flex justify-content-between">
+                            <label for="birthday" class="form-label d-flex justify-content-between">
                                 生日
                                 <span class="text-pink-tint02 fs-9">*必填</span>
                             </label>
-                            <input type="date" class="form-control rounded-pill px-20" id="singupBirthday" required>
+                            <input type="date" class="form-control rounded-pill px-20" id="birthday" required>
                             <div class="invalid-feedback">
                                 請輸入您的生日年月日
                             </div>
                         </div>
                         <div class="col-6">
-                            <label for="singupTitle" class="form-label d-flex justify-content-between">
+                            <label for="title" class="form-label d-flex justify-content-between">
                                 身份
                             </label>
-                            <select class="form-select px-20 rounded-pill" aria-label="Default select example" id="singupTitle">
+                            <select class="form-select px-20 rounded-pill" aria-label="Default select example" id="title">
                                 <option value="學生">學生</option>
                                 <option value="教師">教師</option>
                                 <option value="教師">輔導教師</option>
@@ -128,16 +143,17 @@
                         </div>
                     </div>
                     <div class="mb-32">
-                        <input type="checkbox" required>
+                        <input type="checkbox" id="agree" required>
                                 <span class="ms-4">
-                                    我已經詳讀並同意 <a href="#" class="link-main fw-normal">隱私權保護政策</a>
+                                    我已經詳讀並同意
+                                    <button type="button" class="bg-white border-0 link-main fs-8 fw-normal" data-bs-toggle="modal" data-bs-target="#staticBackdrop">隱私權保護政策</button>。
                                 </span>
                         <!-- error msg -->
                         <div class="invalid-feedback">
                             勾選後才能註冊
                         </div>
                     </div>
-                    <button class="w-100 mb-32 py-8 btn btn-pink c-btn" type="submit">註冊</button>
+                    <button class="w-100 mb-32 py-8 btn btn-pink c-btn" id="btnSubmit" type="submit">註冊</button>
                 </form>
                 <a class="d-block 
                 click-me clickMeToLogin" href="login.html">已經有帳號了嗎？ 點我登入</a>
@@ -145,7 +161,168 @@
         </div>
     </main>
 
+    <!-- Scrollable modal 隱私權保護政策 -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title fs-6 fw-bold text-main" id="staticBackdropLabel">隱私權保護政策</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>非常歡迎您光臨「浪潮情緒卡網站」（以下簡稱本網站），為了讓您能夠安心的使用本網站的各項服務與資訊，特此向您說明本網站的隱私權保護政策，以保障您的權益，請您詳閱下列內容：</p>
+                <br>
+                <ol class="mx-16" style="list-style-type: cjk-ideographic;">
+                    <li class="mx-16">
+                        <span class="fw-bold">隱私權保護政策的適用範圍</span>
+                        <p>隱私權保護政策內容，包括本網站如何處理在您使用網站服務時收集到的個人識別資料。隱私權保護政策不適用於本網站以外的相關連結網站，也不適用於非本網站所委託或參與管理的人員。</p>
+                    </li>
+                    <br>
+                    <li class="mx-16">
+                        <span class="fw-bold">個人資料的蒐集、處理及利用方式</span>
+                        <ul class="ms-16" style="list-style-type: disc;">
+                            <li>
+                                當您造訪本網站或使用本網站所提供之功能服務時，我們將視該服務功能性質，請您提供必要的個人資料，並在該特定目的範圍內處理及利用您的個人資料；非經您書面同意，本網站不會將個人資料用於其他用途。
+                            </li>
+                            <li>
+                                本網站在您使用服務信箱、問卷調查等互動性功能時，會保留您所提供的姓名、電子郵件地址、聯絡方式及使用時間等。
+                            </li>
+                            <li>
+                                於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用連線設備的 IP 位址、使用時間、使用的瀏覽器、瀏覽及點選資料記錄等，做為我們增進網站服務的參考依據，此記錄為內部應用，決不對外公佈。
+                            </li>
+                            <li>
+                                為提供精確的服務，我們會將收集的問卷調查內容進行統計與分析，分析結果之統計數據或說明文字呈現，除供內部研究外，我們會視需要公佈統計數據及說明文字，但不涉及特定個人之資料。
+                            </li>
+                            <li>
+                                您可以隨時向我們提出請求，以更正或刪除本網站所蒐集您錯誤或不完整的個人資料。
+                            </li>
+                        </ul>
+                    </li>
+                    <br>
+                    <li class="mx-16">
+                        <span class="fw-bold">資料之保護</span>
+                        <ul class="ms-16" style="list-style-type: disc;">
+                            <li>
+                                本網站主機均設有防火牆、防毒系統等相關的各項資訊安全設備及必要的安全防護措施，加以保護網站及您的個人資料採用嚴格的保護措施，只由經過授權的人員才能接觸您的個人資料，相關處理人員皆簽有保密合約，如有違反保密義務者，將會受到相關的法律處分。
+                            </li>
+                            <li>
+                                如因業務需要有必要委託其他單位提供服務時，本網站亦會嚴格要求其遵守保密義務，並且採取必要檢查程序以確定其將確實遵守。
+                            </li>
+                        </ul>
+                    </li>
+                    <br>
+                    <li class="mx-16">
+                        <span class="fw-bold">網站對外的相關連結</span>
+                        <p>本網站的網頁提供其他網站的網路連結，您也可經由本網站所提供的連結，點選進入其他網站。但該連結網站不適用本網站的隱私權保護政策，您必須參考該連結網站中的隱私權保護政</p>
+                    </li>
+                    <br>
+                    <li class="mx-16">
+                        <span class="fw-bold">
+                            與第三人共用個人資料之政策
+                        </span>
+                        <p>
+                            本網站絕不會提供、交換、出租或出售任何您的個人資料給其他個人、團體、私人企業或公務機關，但有法律依據或合約義務者，不在此限。
+                            前項但書之情形包括不限於：
+                            <ul class="ms-16" style="list-style-type: disc;">
+                                <li>
+                                    經由您書面同意。
+                                </li>
+                                <li>
+                                    法律明文規定。
+                                </li>
+                                <li>
+                                    為免除您生命、身體、自由或財產上之危險。
+                                </li>
+                                <li>
+                                    與公務機關或學術研究機構合作，基於公共利益為統計或學術研究而有必要，且資料經過提供者處理或蒐集者依其揭露方式無從識別特定之當事人。
+                                </li>
+                                <li>
+                                    當您在網站的行為，違反服務條款或可能損害或妨礙網站與其他使用者權益或導致任何人遭受損害時，經網站管理單位研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。
+                                </li>
+                                <li>
+                                    有利於您的權益。
+                                </li>
+                                <li>
+                                    本網站委託廠商協助蒐集、處理或利用您的個人資料時，將對委外廠商或個人善盡監督管理之責。
+                                </li>
+                            </ul>
+                        </p>
+                    </li>
+                    <br>
+                    <li class="mx-16">
+                        <span class="fw-bold">Cookie 之使用</span>
+                        <p>為了提供您最佳的服務，本網站會在您的電腦中放置並取用我們的 Cookie，若您不願接受 Cookie 的寫入，您可在您使用的瀏覽器功能項中設定隱私權等級為高，即可拒絕 Cookie 的寫入，但可能會導致網站某些功能無法正常執行 。</p>
+                    </li>
+                    <br>
+                    <li class="mx-16">
+                        <span class="fw-bold">隱私權保護政策之修正</span>
+                        <p>本網站隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於網站上。</p>
+                    </li>
+                </ol>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-main link-white" data-bs-dismiss="modal">我瞭解了</button>
+            </div>
+        </div>
+        </div>
+    </div>
+
     <%- include('./layout/baseJs'); -%>
+    <script type="text/javascript" src="../assets/js/beforeunload.js"></script>
     <script type="text/javascript" src="../assets/js/formValidation.js"></script>
+    <script>
+        const email = document.querySelector('#email');
+        const pwd = document.querySelector('#pwd');
+        const pwd2 = document.querySelector('#pwd2');
+        const pwdCmt = document.querySelector('#pwdCmt');
+        const pwd2Cmt = document.querySelector('#pwd2Cmt');
+        const account = document.querySelector('#account');
+        const lastName = document.querySelector('#lastName');
+        const firstName = document.querySelector('#firstName');
+        const birthday = document.querySelector('#birthday');
+        const title = document.querySelector('#title');
+        const agree = document.querySelector('#agree');
+        const btnSubmit = document.querySelector('#btnSubmit');
+
+        // 驗證是否符合 密碼規則
+        pwd.addEventListener("keyup", function(){
+            let pwdRegex = /(?![0-9]+$)(?![a-zA-z]+$)[0-9A-za-z]{8,16}/;
+            if(!pwdRegex.test(pwd.value)){
+                pwdCmt.textContent = "您的密碼不符合密碼規則，請重新設定密碼";
+                pwdCmt.style.color = "#C37979";
+                console.log("您所設定的密碼，不符合密碼規則");
+            } else {
+                pwdCmt.textContent = "您可使用此密碼";
+                pwdCmt.style.color = "#3C9DAE";
+            }
+        })
+
+        // 監聽 pwd & pwd ，並且驗證兩者密碼是否相同
+        pwd.addEventListener("keyup", pwdVerify)
+        pwd2.addEventListener("keyup", pwdVerify)
+        function pwdVerify(){
+            if(pwd.value != "" && pwd2.value != "" && pwd.value == pwd2.value) {
+                pwd2Cmt.textContent = "密碼相符";
+                pwd2Cmt.style.color = "green";
+            } else if(pwd.value != "" && pwd2.value != "" && pwd.value != pwd2.value) {
+                pwd2Cmt.textContent = "密碼有誤，請輸入相同的密碼";
+                pwd2Cmt.style.color = "#C37979";
+            } else if (pwd.value == "") {
+                pwd2Cmt.textContent = "";
+            } 
+        }
+
+        const aHeaders = document.querySelectorAll('#aHeader');
+        aHeaders.forEach(function(a, index){
+            a.addEventListener("click", function(){
+                if (email.value!="" || pwd.value!="" || pwd2.value!="" || account.value!="" || lastName.value!="" || firstName.value!="") {
+                    let confirmResult = confirm("離開後此頁面資料將不會被保存。\r您確定要離開嗎？");
+                    if (confirmResult) {
+                        location.href=a.href;
+                    }
+                }
+            })
+        })
+    </script>
   </body>
 </html>
