--- a/resetPsw.html
+++ b/resetPsw.html
@@ -10,24 +10,24 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-ccd2678c.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-4fc51099.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-809c6d56.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-2db09638.css">
   </head>
   <body>
     <header class="header sticky-top">
     <div class="container py-16 d-flex justify-content-between align-items-center">
         <h1 id="home">
-            <a href="index.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
+            <a href="index.html" data-bs-toggle="tooltip" data-bs-placement="bottom" id="aHeader" title="回到首頁">浪潮情緒卡</a>
         </h1>
         <ul class="d-flex justify-content-end justify-content-md-between align-items-center mb-0 ps-0">
             <li class="d-none d-md-block " data-bs-toggle="tooltip" data-bs-placement="bottom" title="認識情緒與情緒卡">
-                <a href="aboutEmotions.html" class="px-4 py-8 link-gray-550">關於情緒</a>
+                <a href="aboutEmotions.html" class="px-4 py-8 link-gray-550" id="aHeader">關於情緒</a>
             </li>
             <li class="d-none d-md-block ms-20 text-nowrap" data-bs-toggle="tooltip" data-bs-placement="bottom" title="登入">
-                <a href="login.html" class="btn btn-main c-btn">登入</a>
+                <a href="login.html" class="btn btn-main c-btn" id="aHeader">登入</a>
             </li>
             <li class="d-none d-md-block ms-16" data-bs-toggle="tooltip" data-bs-placement="bottom" title="註冊">
-                <a href="signUp.html" class="btn btn-pink c-btn">註冊</a>
+                <a href="signUp.html" class="btn btn-pink c-btn" id="aHeader">註冊</a>
             </li>
             <li class="d-md-none position-relative">
                 <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
