--- a/emoCardsAnger.html
+++ b/emoCardsAnger.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-    <script type="module" crossorigin src="/wavemocards/assets/main-d2acda97.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-3a038c38.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-ac58734e.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-b64094ec.css">
   </head>
   <body>
     <header class="header h-logined fixed-top">
@@ -20,7 +20,7 @@
             <a href="home.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="回到首頁">浪潮情緒卡</a>
         </h1>
         <div class="d-lg-none position-relative">
-            <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <button class="px-8 py-4 btn btn-outline-main rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                 <i class="bi bi-list"></i>
             </button>
             <div class="collapse" style="position: absolute; right: 0; top: 40px;" id="collapseExample">
@@ -35,9 +35,9 @@
                         <li>
                             <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="myRecords.html">我的紀錄</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="sharedByOthers.html">他人的分享</a>
-                        </li>
+                        </li> -->
                         <li>
                             <a class="d-block px-16 py-12 link-gray-600 btn-hover-main-tint02 rounded-2" href="account.html">我的帳戶</a>
                         </li>
@@ -58,8 +58,8 @@
             <li class="ms-16">
                 <a href="myRecords.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看我的情緒紀錄與分析">我的紀錄</a>
             </li>
-            <li class="ms-16">
-                <a href="sharedByOthers.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看他人分享的情緒紀錄">他人的分享</a>
+            <!-- <li class="ms-16">
+                <a href="sharedByOthers.html" class="px-4 py-8" data-bs-toggle="tooltip" data-bs-placement="bottom" title="觀看他人分享的情緒紀錄">他人的分享</a> -->
             </li>
             <li class="ms-16">
                 <a href="account.html" class="profile" data-bs-toggle="tooltip" data-bs-placement="bottom" title="管理我的帳戶">
