--- a/signUp.html
+++ b/signUp.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-d2acda97.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-3a038c38.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-ac58734e.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-b64094ec.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -30,7 +30,7 @@
                 <a href="signUp.html" class="btn btn-pink c-btn" id="aHeader">註冊</a>
             </li>
             <li class="d-md-none position-relative">
-                <button class="px-8 py-4 btn btn-main btn-hamburger border-0 rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <button class="px-8 py-4 btn btn-outline-main rounded-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     <i class="bi bi-list"></i>
                 </button>
                 <div class="collapse" style="position: absolute; right: 0; top: 40px;" id="collapseExample">
