--- a/pages/emoCardsRelived.html
+++ b/pages/emoCardsRelived.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-    <title>浪潮情緒卡｜放鬆</title>
+    <title>浪潮情緒卡｜安心</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
@@ -15,14 +15,15 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-      <div class="container py-16 pt-72" id="top">
-        <div class="titleBar d-flex justify-content-between align-items-center">
-          <h2>安心</h2>
+      <div class="container py-16 pt-112" id="top">
+        <!-- 標題 -->
+          <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+            <h2 class="fs-3">安心</h2>
           <div class="nav-btn d-flex justify-content-end">
               <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
           </div>
         </div>
-        <div class="d-flex flex-wrap mb-72" id="relivedCards">
+        <div class="d-flex flex-wrap justify-content-center justify-content-md-start mb-72" id="relivedCards">
         </div>
       </div>
     </main>
