--- a/pages/findEmoAction.html
+++ b/pages/findEmoAction.html
@@ -12,10 +12,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
   <body>
-    <%- include('./layout/headerLoggedIn'); -%>
+    <%- include('./layout/headerLoggedInNoFixed'); -%>
 
     <main>
-        <div class="container py-16 pt-72" id="top">
+        <div class="container py-16 pt-72 " id="top">
             <!-- process bar -->
             <div class="mt-24 d-flex justify-content-end">
                 <div class="progressBar mt-16 mb-8 px-12">
