--- a/pages/findMyEmotions.html
+++ b/pages/findMyEmotions.html
@@ -15,26 +15,26 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main class="box-findEmo-main">
-      <div class="container py-16 mb-48 pt-72" id="top">
+      <div class="container py-16 mb-48 pt-112" id="top">
           <!-- 標題欄 -->
-          <div class="titleBar d-flex justify-content-between align-items-center">
-            <h2>找尋我的情緒</h2>
+          <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between">
+            <h2 class="fs-3">找尋我的情緒</h2>
           </div>
   
           <div class="row justify-content-between align-items-center">
             <!-- 導覽說明 -->
             <div class="col-md-6 mb-24 mb-md-0">
-              <div class="h-100 px-24 py-24 rounded-3 bg-main-tint03 fs-7 text-gray-700">
-                <p class="mb-md-12">你在情緒的世界裡迷航了嗎？</p>
-                <p class="mb-md-12">沒關係，讓我們一起在浪潮情緒卡中，找尋自己的情緒。</p>
-                <p class="mb-md-12">邀請你先閉上眼睛，深呼吸，再慢慢地吐氣。</p>
-                <p class="mb-md-12">在吸氣與吐氣的過程，慢慢地感受自己的身體與心靈的狀態。</p>
-                <p>如果準備好了的話，<span class="text-main fw-bold">請點擊「開始探索」</span>，開始探索情緒浪潮吧！</p>
+              <div class="h-100 px-20 py-16 rounded-3 bg-main-tint03 fs-7 text-gray-700">
+                <p class="mb-md-12 fs-8">你在情緒的世界裡迷航了嗎？</p>
+                <p class="mb-md-12 fs-8">沒關係，讓我們一起在浪潮情緒卡中，找尋自己的情緒。</p>
+                <p class="mb-md-12 fs-8">邀請你先閉上眼睛，<span class="text-main fw-bold">深呼吸</span>，再慢慢地吐氣。</p>
+                <p class="mb-md-12 fs-8">在吸氣與吐氣的過程，<span class="text-main fw-bold">慢慢地感受自己的身體與心靈的狀態</span>。</p>
+                <p class="fs-8">如果準備好了的話，<span class="text-main fw-bold">請點擊「開始探索」</span>，開始探索情緒浪潮吧！</p>
               </div>
             </div>
             <!-- 分類探索 -->
             <div class="col-md-6 d-flex flex-column align-items-center">
-              <a class="d-block mt-8 px-56 py-40 btn-find d-flex justify-content-between align-items-center rounded-pill" href="findEmoClassified.html">
+              <a class="d-block mt-8 mb-4 px-56 py-40 btn-find d-flex justify-content-between align-items-center rounded-pill" href="findEmoClassified.html">
                 開始探索
               </a>
               <!-- <a class="mt-8 w-75 btn-find d-flex justify-content-between align-items-center rounded-pill" href="findEmoClassified.html">
