--- a/pages/addEmoCard.html
+++ b/pages/addEmoCard.html
@@ -16,10 +16,10 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-        <div class="container py-16 pt-72" id="top">
+        <div class="container py-16 pt-112" id="top">
             <!-- 標題欄 -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>新增情緒卡</h2>
+            <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+                <h2 class="fs-3">新增情緒卡</h2>
                 <div class="nav-btn d-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
                 </div>
