--- a/pages/emoCardsAnger.html
+++ b/pages/emoCardsAnger.html
@@ -15,14 +15,14 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-      <div class="container py-16 pt-72" id="top">
-        <div class="titleBar d-flex justify-content-between align-items-center">
-          <h2>生氣</h2>
+      <div class="container py-16 pt-112" id="top">
+        <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+          <h2 class="fs-3">生氣</h2>
           <div class="nav-btn d-flex justify-content-end">
               <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
           </div>
         </div>
-        <div class="d-flex flex-wrap mb-72" id="angerCards">
+        <div class="d-flex flex-wrap justify-content-center justify-content-md-start mb-72" id="angerCards">
           <!-- <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger01">
             <p>不&nbsp;滿</p>
             <div class="img-box">
