--- a/pages/emoCardsHate.html
+++ b/pages/emoCardsHate.html
@@ -15,14 +15,15 @@
     <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
-      <div class="container py-16 pt-72" id="top">
-        <div class="titleBar d-flex justify-content-between align-items-center">
-          <h2>討厭</h2>
+      <div class="container py-16 pt-112" id="top">
+        <!-- 標題 -->
+          <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-end">
+            <h2 class="fs-3">討厭</h2>
           <div class="nav-btn d-flex justify-content-end">
               <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
           </div>
         </div>
-        <div class="d-flex flex-wrap mb-72" id="hateCards">
+        <div class="d-flex flex-wrap justify-content-center justify-content-md-start mb-72" id="hateCards">
           <!-- <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate01">
             <p>無&nbsp;聊</p>
             <div class="img-box">
