--- a/pages/findEmoClassifiedExpand.html
+++ b/pages/findEmoClassifiedExpand.html
@@ -19,7 +19,7 @@
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>情緒卡</h2>
                 <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">分類</a>
+                    <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">收合</a>
                     <div class="ms-16 btn-disable">展開</div>
                     <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
                         <i class="bi bi-folder2"></i>
