--- a/pages/findEmoStrength1st.html
+++ b/pages/findEmoStrength1st.html
@@ -49,7 +49,7 @@
             <div class="titleBar d-lg-flex justify-content-between align-items-center">
                 <h2>我的情緒強度｜第一次</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="myEmoCardsHolder.html">上一步</a>
+                    <a class="btn btn-outline-main c-btn d-flex justify-content-center align-items-center" href="myEmoCardsHolder.html">上一步</a>
                     <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoBackground.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
